--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
   min-height: 100vh;
   background-color: #000000;
   color: #9ad79b;
+  position: relative;
 }
 
 header {
@@ -26,7 +27,7 @@ header {
 }
 
 main {
-  position: absolute;
+  position: relative;
   top: 100px;
   width: 100%;
 }
@@ -36,7 +37,7 @@ main > .content {
   border: #9ad79b dashed 1px;
 }
 
-main > .sidebar{
+main > .sidebar {
   padding: 15px;
   position: absolute;
   right: 0;
@@ -59,6 +60,6 @@ footer {
   padding: 15px;
   border: #9ad79b dashed 1px;
   width: 100%;
-  position: fixed;
+  position: absolute;
   bottom: 0;
 }
